applications/opengauss-summary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-summary
  name: opengauss-summary
