applications/opengauss-summary/oauth-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=gitee
            - --email-domain=*
            - --proxy-prefix=/2021summary/oauth2
            - --skip-auth-regex=^/2021summary/agreement_ch.html
            - --skip-auth-regex=^/2021summary/agreement_en.html
            - --upstream=http://opengauss-summary.opengauss-summary.svc.cluster.local
            - --http-address=0.0.0.0:4180
            - --cookie-expire=6h0m0s
            - --set-xauthrequest=true
            - --custom-templates-dir=/bin/static/login
            - --custom-templates-sign-in=gauss.html
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:72ca5c666b0916c5469bef17305ec34848282a2f
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
