applications/opengauss-summary/summary-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-summary
spec:
  selector:
    component: opengauss-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
