applications/opengauss-summary/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: website-summary-ingress
spec:
  tls:
    - hosts:
        - events.opengauss.org
      secretName: website-summary-tls-secret
  rules:
    - host: events.opengauss.org
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /2021summary/
